<resources>
    <string name="app_name">Travelers_Calculator</string>
    <string name="calculator_tab">Calculator</string>
    <string name="units_tab">Units</string>
    <string name="currency_tab">Currency</string>
    <string name="time_tab">Time</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="base10">10^</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="exponent">^</string>
    <string name="negative">(-)</string>
    <string name="dot">.</string>
    <string name="sqrt">√</string>
    <string name="square">^2</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>
    <string name="equal">=</string>
    <string name="error_message">"Can't Convert!"</string>
    <string name="waiting_message">Calculating...</string>

    <!--TODO: HAVE THE ARRAYS FOR EACH UNIT TYPE AND SET THEM UP IN SO THAT CAN BE REFERENCED ACCORDINGLY IN THE CONVERSION FACTORY-->
    <!--length-->
    <string-array name="us_units_length">
        <item>inches(in)</item>
        <item>feet(ft)</item>
        <item>yards(yd)</item>
        <item>miles</item>
    </string-array>
    <string-array name="metric_units_length">
        <item>centimeters(cm)</item>
        <item>meters(m)</item>
        <item>kilometers(km)</item>
    </string-array>

    <!--area-->
    <string-array name="us_units_area">
        <item>inches²(in²)</item>
        <item>feet²(ft²)</item>
        <item>yards²(yd²)</item>
        <item>miles²</item>
    </string-array>
    <string-array name="metric_units_area">
        <item>centimeters²(cm²)</item>
        <item>meters²(m²)</item>
        <item>kilometers²(km²)</item>
    </string-array>

    <!--weight-->
    <string-array name="us_units_weight">
        <item>pounds(lb)</item>
        <item>tons</item>
    </string-array>
    <string-array name="metric_units_weight">
        <item>ounces(oz)</item>
        <item>grams(g)</item>
        <item>kilograms(kg)</item>
    </string-array>

    <!--temperature-->
    <string-array name="us_units_temp">
        <item>Fahrenheit(F°)</item>
    </string-array>
    <string-array name="metric_units_temp">
        <item>Celsius(C°)</item>
    </string-array>

    <!--volume-->
    <string-array name="us_units_volume">
        <item>gallon(gal)</item>
        <item>pint(pt)</item>
        <item>quart(qt)</item>
    </string-array>
    <string-array name="metric_units_volume">
        <item>fluid ounces(fl oz)</item>
        <item>milliliters(mL)</item>
        <item>liters(L)</item>
    </string-array>

    <!--currencies-->
    <string-array name="currencies_list">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>MXN</item>
        <item>JPY</item>
        <item>CNY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>PLN</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>ZAR</item>
        <item>SGD</item>



    </string-array>

    <!--currencies description-->
    <string name="Dollars">United States\nDollar</string>
    <string name="Euros">European Euro</string>
    <string name="Pounds">Pound Sterling</string>
    <string name="Pesos">Mexican Peso</string>
    <string name="Yens">Japanese Yen</string>
    <string name="Yuans">Chinese Yuan</string>
    <string name="Levs">Belgian Levs</string>
    <string name="Korunas">Czech Koruna</string>
    <string name="DKrones">Danish Krone</string>
    <string name="Zlotys">Polish Zloty</string>
    <string name="Kronas">Swedish Krona</string>
    <string name="Francs">Swiss Franc</string>
    <string name="Roubles">Russian Rouble</string>
    <string name="Liras">Turkish Lira</string>
    <string name="AusDollars">Australian\nDollar</string>
    <string name="Reals">Brazilian Real</string>
    <string name="CanDollars">Canadian Dollar</string>
    <string name="Shekels">Israeli Shekel</string>
    <string name="Rupees">Indian Rupee</string>
    <string name="Wons">South Korean\nWon</string>
    <string name="Rands">South African\nRand</string>
    <string name="SingDollars">Singapore Dollar</string>

    <!--https request urls-->
    <!--Dollars-->
        <string name="USDtoEUR">https://api.exchangeratesapi.io/latest?symbols=USD,EUR</string>
        <string name="USDtoGBP">https://api.exchangeratesapi.io/latest?symbols=USD,GBP</string>
        <string name="USDtoMXN">https://api.exchangeratesapi.io/latest?symbols=USD,MXN</string>
        <string name="USDtoJPY">https://api.exchangeratesapi.io/latest?symbols=USD,JPY</string>
        <string name="USDtoCNY">https://api.exchangeratesapi.io/latest?symbols=USD,CNY</string>
    <!--Euros-->
        <string name="EURtoUSD">https://api.exchangeratesapi.io/latest?symbols=EUR,USD</string>
        <string name="EURtoGBP">https://api.exchangeratesapi.io/latest?symbols=EUR,GBP</string>
        <string name="EURtoMXN">https://api.exchangeratesapi.io/latest?symbols=EUR,MXN</string>
        <string name="EURtoJPY">https://api.exchangeratesapi.io/latest?symbols=EUR,JPY</string>
        <string name="EURtoCNY">https://api.exchangeratesapi.io/latest?symbols=EUR,CNY</string>
    <!--Pounds-->
        <string name="GBPtoEUR">https://api.exchangeratesapi.io/latest?symbols=GBP,EUR</string>
        <string name="GBPtoUSD">https://api.exchangeratesapi.io/latest?symbols=GBP,USD</string>
        <string name="GBPtoMXN">https://api.exchangeratesapi.io/latest?symbols=GBP,MXN</string>
        <string name="GBPtoJPY">https://api.exchangeratesapi.io/latest?symbols=GBP,JPY</string>
        <string name="GBPtoCNY">https://api.exchangeratesapi.io/latest?symbols=GBP,CNY</string>
    <!--Pesos-->
        <string name="MXNtoEUR">https://api.exchangeratesapi.io/latest?symbols=MXN,EUR</string>
        <string name="MXNtoUSD">https://api.exchangeratesapi.io/latest?symbols=MXN,USD</string>
        <string name="MXNtoGBP">https://api.exchangeratesapi.io/latest?symbols=MXN,GBP</string>
        <string name="MXNtoJPY">https://api.exchangeratesapi.io/latest?symbols=MXN,JPY</string>
        <string name="MXNtoCNY">https://api.exchangeratesapi.io/latest?symbols=MXN,CNY</string>
    <!--Yens-->
        <string name="JPYtoUSD">https://api.exchangeratesapi.io/latest?symbols=JPY,USD</string>
        <string name="JPYtoEUR">https://api.exchangeratesapi.io/latest?symbols=JPY,EUR</string>
        <string name="JPYtoGBP">https://api.exchangeratesapi.io/latest?symbols=JPY,GBP</string>
        <string name="JPYtoMXN">https://api.exchangeratesapi.io/latest?symbols=JPY,MXN</string>
        <string name="JPYtoCNY">https://api.exchangeratesapi.io/latest?symbols=JPY,CNY</string>
    <!--Yuans-->
        <string name="CNYtoUSD">https://api.exchangeratesapi.io/latest?symbols=CNY,USD</string>
        <string name="CNYtoEUR">https://api.exchangeratesapi.io/latest?symbols=CNY,EUR</string>
        <string name="CNYtoGBP">https://api.exchangeratesapi.io/latest?symbols=CNY,GBP</string>
        <string name="CNYtoMXN">https://api.exchangeratesapi.io/latest?symbols=CNY,MXN</string>
        <string name="CNYtoJPY">https://api.exchangeratesapi.io/latest?symbols=CNY,JPY</string>


</resources>
