<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLay0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/background_white">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/zero"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
<!--calculator widget
        <Button
            android:id="@+id/calculator_widget_calc"
            android:layout_width="54dp"
            android:layout_height="48dp"
            android:alpha="0.5"
            android:background="@drawable/ic_save"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />
-->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--first row-->
    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/exponent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/exponent" />

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/eight"
            />
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/nine" />
        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/bold_blue"
            android:text="@string/ac" />
    </LinearLayout>
    <!--second row-->
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/square"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/square" />
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/colorAccent"
            android:text="@string/four" />
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/five" />
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/six" />
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/plus" />
    </LinearLayout>
    <!--third row-->
    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sqrt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/sqrt" />

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/colorAccent"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/two" />
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/colorAccent"
            android:text="@string/three" />
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/minus" />
    </LinearLayout>
    <!--fourth row-->
    <LinearLayout
        android:id="@+id/four_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/base10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/primary"
            android:text="@string/base10" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/colorAccent"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/dot" />
        <Button
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/negative" />
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:textColor="@color/primary_text"
            android:background="@color/primary"
            android:text="@string/multiply" />
    </LinearLayout>
    <!--fifth row-->
    <LinearLayout
        android:id="@+id/five_row"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_paren"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/primary"
            android:padding="8dp"
            android:text="@string/open_paren"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/close_paren"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/primary"
            android:padding="8dp"
            android:text="@string/close_paren"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equal"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/bold_blue"
            android:padding="8dp"
            android:text="@string/equal"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/primary"
            android:padding="8dp"
            android:text="@string/divide"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>